force-app/main/default/objects/Opportunity/fields/Assignment_Category__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Category__c</fullName>
    <label>Assignment Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>High Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>