force-app/main/default/objects/Opportunity/fields/Queue_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Queue_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Queue Assignment</label>
    <referenceTo>Opportunity_Queue__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>