force-app/main/default/objects/Opportunity/fields/Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Created</label>
    <type>Checkbox</type>
</CustomField>