force-app/main/default/objects/Opportunity/fields/Value_at_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Value_at_Exchange_Rate__c</fullName>
    <formula>Amount  *  Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value at Exchange Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>