force-app/main/default/objects/Opportunity/listViews/All_Open_Opportunity.listView-meta.xml
<ListView>
    <fullName>All_Open_Opportunity</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notContain</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>All Open Opportunity</label>
</ListView>