force-app/main/default/objects/Opportunity/listViews/High_Value.listView-meta.xml
<ListView>
    <fullName>High_Value</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Assignment_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assignment_Category__c</field>
        <operation>equals</operation>
        <value>High Value</value>
    </filters>
    <label>High Value Opportunity</label>
</ListView>